@@ -23,6 +23,7 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLongArray;
+import java.util.function.BooleanSupplier;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -81,25 +82,25 @@ class DataFileCollectionCompactionTest {
         coll.startWriting();
         index.put(1L, storeDataItem(coll, new long[] {1, APPLE}));
         index.put(2L, storeDataItem(coll, new long[] {2, BANANA}));
-        coll.endWriting(1, 2).setFileCompleted();
+        coll.endWriting(1, 2);
 
         coll.startWriting();
         index.put(3L, storeDataItem(coll, new long[] {3, APPLE}));
         index.put(4L, storeDataItem(coll, new long[] {4, CHERRY}));
-        coll.endWriting(2, 4).setFileCompleted();
+        coll.endWriting(2, 4);
 
         coll.startWriting();
         index.put(4L, storeDataItem(coll, new long[] {4, CUTTLEFISH}));
         index.put(5L, storeDataItem(coll, new long[] {5, BANANA}));
         index.put(6L, storeDataItem(coll, new long[] {6, DATE}));
-        coll.endWriting(3, 6).setFileCompleted();
+        coll.endWriting(3, 6);
 
         coll.startWriting();
         index.put(7L, storeDataItem(coll, new long[] {7, APPLE}));
         index.put(8L, storeDataItem(coll, new long[] {8, EGGPLANT}));
         index.put(9L, storeDataItem(coll, new long[] {9, CUTTLEFISH}));
         index.put(10L, storeDataItem(coll, new long[] {10, FIG}));
-        coll.endWriting(5, 10).setFileCompleted();
+        coll.endWriting(5, 10);
 
         final CASableLongIndex indexUpdater = new CASableLongIndex() {
             public long get(long key) {
@@ -116,10 +117,12 @@ class DataFileCollectionCompactionTest {
                 return false;
             }
 
-            public <T extends Throwable> void forEach(final LongAction<T> action) throws InterruptedException, T {
+            public <T extends Throwable> boolean forEach(final LongAction<T> action, BooleanSupplier cond)
+                    throws InterruptedException, T {
                 for (final Map.Entry<Long, Long> e : index.entrySet()) {
                     action.handle(e.getKey(), e.getValue());
                 }
+                return true;
             }
         };
         final var compactor =
@@ -153,7 +156,7 @@ class DataFileCollectionCompactionTest {
 
         assertEquals(1, coll.getAllCompletedFiles().size(), "Too many files left over");
 
-        final var dataFileReader = coll.getAllCompletedFiles().get(0);
+        final var dataFileReader = coll.getAllCompletedFiles().getFirst();
         final var itr = dataFileReader.createIterator();
         prevKey = -1;
         while (itr.next()) {
@@ -179,7 +182,7 @@ class DataFileCollectionCompactionTest {
             for (int j = 0; j < MAXKEYS; ++j) {
                 index[j] = storeDataItem(store, new long[] {j, i * j});
             }
-            store.endWriting(0, index.length).setFileCompleted();
+            store.endWriting(0, index.length);
         }
 
         final CountDownLatch compactionAboutComplete = new CountDownLatch(1);
@@ -208,11 +211,12 @@ class DataFileCollectionCompactionTest {
                             return true;
                         }
 
-                        public <T extends Throwable> void forEach(final LongAction<T> action)
+                        public <T extends Throwable> boolean forEach(final LongAction<T> action, BooleanSupplier cond)
                                 throws InterruptedException, T {
                             for (int i = 0; i < MAXKEYS; i++) {
                                 action.handle(i, index[i]);
                             }
+                            return true;
                         }
                     };
 
@@ -265,10 +269,12 @@ class DataFileCollectionCompactionTest {
                     return true;
                 }
 
-                public <T extends Throwable> void forEach(final LongAction<T> action) throws InterruptedException, T {
+                public <T extends Throwable> boolean forEach(final LongAction<T> action, BooleanSupplier cond)
+                        throws InterruptedException, T {
                     for (int i = 0; i < MAXKEYS; i++) {
                         action.handle(i, index[i]);
                     }
+                    return true;
                 }
             };
 
@@ -323,11 +329,12 @@ class DataFileCollectionCompactionTest {
                         return index.compareAndSet((int) key, oldValue, newValue);
                     }
 
-                    public <T extends Throwable> void forEach(final LongAction<T> action)
+                    public <T extends Throwable> boolean forEach(final LongAction<T> action, BooleanSupplier cond)
                             throws InterruptedException, T {
                         for (int i = 0; i < index.length(); i++) {
                             action.handle(i, index.get(i));
                         }
+                        return true;
                     }
                 };
 
@@ -343,7 +350,7 @@ class DataFileCollectionCompactionTest {
 
                 // Finish writing the current copy, which has newer data but an older index than
                 // the merged file
-                store.endWriting(0, index.length()).setFileCompleted();
+                store.endWriting(0, index.length());
             }
 
             // Validate the result
@@ -373,7 +380,7 @@ class DataFileCollectionCompactionTest {
             for (int j = 0; j < MAX_KEYS; ++j) {
                 index.set(j, storeDataItem(store, new long[] {j, j}));
             }
-            store.endWriting(0, index.length()).setFileCompleted();
+            store.endWriting(0, index.length());
 
             // Write new copies
             for (long i = 1; i < NUM_UPDATES; i++) {
@@ -396,11 +403,12 @@ class DataFileCollectionCompactionTest {
                         return index.compareAndSet((int) key, oldValue, newValue);
                     }
 
-                    public <T extends Throwable> void forEach(final LongAction<T> action)
+                    public <T extends Throwable> boolean forEach(final LongAction<T> action, BooleanSupplier cond)
                             throws InterruptedException, T {
                         for (int i = 0; i < index.length(); i++) {
                             action.handle(i, index.get(i));
                         }
+                        return true;
                     }
                 };
 
@@ -416,7 +424,7 @@ class DataFileCollectionCompactionTest {
 
                 // Finish writing the current copy, which has newer data but an older index than
                 // the merged file
-                store.endWriting(0, index.length()).setFileCompleted();
+                store.endWriting(0, index.length());
             }
 
             // Restore from all files
@@ -464,7 +472,7 @@ class DataFileCollectionCompactionTest {
                 final long dataLocation = storeDataItem(store, new long[] {i * numValues + j, i * numValues + j});
                 index.put(i * numValues + j, dataLocation);
             }
-            store.endWriting(0, index.size()).setFileCompleted();
+            store.endWriting(0, index.size());
         }
         // Start compaction
         // Test scenario 0: start merging with mergingPaused semaphore locked, so merging
@@ -517,7 +525,7 @@ class DataFileCollectionCompactionTest {
                 index.put(i * numValues + j, dataLocation);
             }
         }
-        store.endWriting(0, index.size()).setFileCompleted();
+        store.endWriting(0, index.size());
         newFileWriteCompleteLatch.countDown();
         // Test scenario 2: lock the semaphore just before taking a snapshot. Compaction may still
         // be
@@ -565,7 +573,6 @@ class DataFileCollectionCompactionTest {
         f.get();
     }
 
-    @SuppressWarnings("unchecked")
     @Test
     @DisplayName("Restore with inconsistent index")
     void testInconsistentIndex() throws Exception {
@@ -584,7 +591,7 @@ class DataFileCollectionCompactionTest {
             for (int j = 0; j < MAXKEYS; ++j) {
                 index.put(j, storeDataItem(store, new long[] {j, i * j}));
             }
-            store.endWriting(0, index.size()).setFileCompleted();
+            store.endWriting(0, index.size());
         }
 
         final Path snapshot = testDir.resolve("snapshot");
@@ -616,8 +623,9 @@ class DataFileCollectionCompactionTest {
                 return true;
             }
 
-            public <T extends Throwable> void forEach(final LongAction<T> action) throws InterruptedException, T {
-                index.forEach(action);
+            public <T extends Throwable> boolean forEach(final LongAction<T> action, BooleanSupplier cond)
+                    throws InterruptedException, T {
+                return index.forEach(action, cond);
             }
         };
 
@@ -648,8 +656,9 @@ class DataFileCollectionCompactionTest {
                 return true;
             }
 
-            public <T extends Throwable> void forEach(final LongAction<T> action) throws InterruptedException, T {
-                index2.forEach(action);
+            public <T extends Throwable> boolean forEach(final LongAction<T> action, BooleanSupplier cond)
+                    throws InterruptedException, T {
+                return index2.forEach(action, cond);
             }
         };
 
